--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <hr>
 
       <div class="calculatedage">
-        <span class="age">--</span><h1>years</h1><br>
-        <span class="age">--</span><h1>months</h1><br>
-        <span class="age">--</span><h1>days</h1>
+        <span class="age" id="years">--</span><h1> years</h1><br>
+        <span class="age" id="months">--</span><h1> months</h1><br>
+        <span class="age" id="days">--</span><h1> days</h1>
       </div>
     </div>
   </main>
@@ -61,6 +61,6 @@
     </div>
   </footer>
   
-  <script src="index.js" type="javascript"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
